--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=98,59
+Size=625,400
 Collapsed=0
 
 [Window][Test]
@@ -130,6 +130,17 @@ Pos=62,60
 Size=453,126
 Collapsed=0
 
+[Window][Dear ImGui Demo]
+Pos=0,0
+Size=882,525
+Collapsed=0
+DockId=0x0000000A,2
+
+[Window][Dear ImGui Debug Log]
+Pos=109,87
+Size=597,387
+Collapsed=0
+
 [Docking][Data]
 DockNode              ID=0x00000001 Pos=946,306 Size=551,268 Split=X Selected=0x6FEC1CC8
   DockNode            ID=0x00000002 Parent=0x00000001 SizeRef=172,219 Selected=0x6FEC1CC8
@@ -139,7 +150,7 @@ DockSpace             ID=0x11111111 Window=0x1BBC0F80 Pos=0,0 Size=1440,810 Spli
     DockNode          ID=0x00000004 Parent=0x0000000C SizeRef=880,810 Split=Y
       DockNode        ID=0x00000005 Parent=0x00000004 SizeRef=1920,39 Selected=0x9EBFE3AB
       DockNode        ID=0x00000006 Parent=0x00000004 SizeRef=1920,1039 Split=Y
-        DockNode      ID=0x0000000A Parent=0x00000006 SizeRef=881,525 CentralNode=1 Selected=0xD1EB2482
+        DockNode      ID=0x0000000A Parent=0x00000006 SizeRef=881,525 CentralNode=1 Selected=0x1E7E18E3
         DockNode      ID=0x0000000B Parent=0x00000006 SizeRef=881,283 Split=X Selected=0x00161063
           DockNode    ID=0x00000010 Parent=0x0000000B SizeRef=225,283 Split=X Selected=0x49278EEE
             DockNode  ID=0x00000008 Parent=0x00000010 SizeRef=223,283 Selected=0xEA83D666
